--- a/week9/w9_spatialregression_lab.ipynb
+++ b/week9/w9_spatialregression_lab.ipynb
@@ -2705,7 +2705,7 @@
    "source": [
     "### Spatial Heterogeneity vs Spatial Dependence\n",
     "\n",
-    "The stationarity assumption is a key component of statistical analysis, positing that the statistical properties of a process are constant over space or time. However, this assumption is often challenged in spatial analysis by the concept of spatial heterogeneity, which highlights the variability of relationships across different geographic locations. Spatial heterogeneity suggests that the influence of one variable on another can be moderated by geospatial or political factors, and it underscores the importance of recognizing that 'global' estimates might mask local variations in relationships that are significant in specific locations. This concept is fundamentally distinct from spatial dependence, which focuses on the interrelation of characteristics among neighboring locations, emphasizing the principle that 'neighbors matter.\n",
+    "In statistical analysis, the stationarity assumption assumes that everything stays constant over time or space. However, this assumption can be challenged in spatial analysis due to the presence of spatial heterogeneity. This concept refers to the variability of relationships across different geographic locations, suggesting that the influence of one variable on another can be moderated by geospatial or political factors. It is essential to recognize that 'global' estimates might mask local variations in relationships that are significant in specific locations. Spatial heterogeneity is fundamentally different from spatial dependence, which focuses on the interrelation of characteristics among neighboring locations, indicating that 'neighbors matter.'\n",
     "\n",
     "Addressing Spatial Heterogenity:\n",
     "- Spatial Fixed Effects\n",
@@ -2719,15 +2719,7 @@
     "- Spatial Error\n",
     "    - Spatial Error Model\n",
     "    - Spatial Durbin Error Model (SDEM)\n",
-    "- SLX\n",
-    "\n",
-    "<div style=\"text-align:center;\">\n",
-    "    <img src=\"img\\Taxonomy of Spatial Model.png\" style=\"height:300px\" />\n",
-    "</div>\n",
-    "\n",
-    "<div style=\"text-align:center;\">\n",
-    "    <img src=\"img\\Taxonomy of Spatial Model-2.png\" style=\"height:328px\" />\n",
-    "</div>\n"
+    "- SLX\n"
    ]
   },
   {
@@ -2735,7 +2727,7 @@
    "id": "6a1060e2",
    "metadata": {},
    "source": [
-    "## Taxonomy of Spatial Model\n",
+    "### Taxonomy of Spatial Models\n",
     "\n",
     "<div style=\"text-align:center;\">\n",
     "    <img src=\"img\\Taxonomy of Spatial Model.png\" style=\"height:300px\" />\n",
@@ -2743,15 +2735,34 @@
     "\n",
     "<div style=\"text-align:center;\">\n",
     "    <img src=\"img\\Taxonomy of Spatial Model-2.png\" style=\"height:328px\" />\n",
-    "</div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0c50cfb",
+   "metadata": {},
+   "source": [
+    "\\begin{align*}\n",
+    "\\text{OLS}: \\quad & y_i = \\beta X_i + \\varepsilon_i \\\\\n",
+    "\\text{Lag}: \\quad & y_i = \\beta X_i + \\rho (w_i y_i) + \\varepsilon_i \\\\\n",
+    "\\text{SDM}: \\quad & y_i = \\beta X_i + \\rho (w_i y_i) + \\theta (w_i X_i) + \\varepsilon_i \\\\\n",
+    "\\text{Error}: \\quad & y_i = \\beta X_i + (I - \\lambda w_i)^{-1} \\varepsilon \\\\\n",
+    "\\text{SDEM}: \\quad & y_i = \\beta X_i + \\theta (w_i X_i) + (I - \\lambda w_i)^{-1} \\varepsilon \\\\\n",
+    "\\text{SLX}: \\quad & y_i = \\beta X_i + \\theta (w_i X_i) + \\varepsilon_i \\\\\n",
+    "\\end{align*}\n",
     "\n",
-    "<div style=\"text-align:center;\">\n",
-    "    <img src=\"img\\spatial_lag.png\" style=\"height:355px\" />\n",
-    "</div>\n",
-    "\n",
-    "<div style=\"text-align:center;\">\n",
-    "    <img src=\"img\\spatial_error.png\" style=\"height:328px\" />\n",
-    "</div>\n",
+    "| Variable | Description |\n",
+    "|----------|-------------|\n",
+    "| $y_i$ | Outcome variable for focal unit (i) |\n",
+    "| $X_i$ | Vector of covariates |\n",
+    "| $\\beta$ | Coefficients for those covariates |\n",
+    "| $w_iy_i$ | The average y value for all neighbors of focal unit (i), based on a specified neighbor weight matrix |\n",
+    "| $w_iX_i$ | For each x in the vector of covariates, the average value of all neighbors of focal unit (i), based on a specified neighbor weight matrix |\n",
+    "| $\\rho$ | Coefficient for the spatial lag (\"rho\") |\n",
+    "| $\\theta$ | Coefficients for each of the spatially lagged covariates |\n",
+    "| $\\lambda$ | Correlation parameter (i.e., correlation coefficient of errors among neighbors). Bounded by -1 and 1. A value of zero indicates no autocorrelation |\n",
+    "| $\\varepsilon_i$ | Error (assumed IID and no longer spatially clustered) |\n",
     "\n",
     "More details: https://www.msarrias.com/uploads/3/7/7/8/37783629/spatialeconometrics.pdf"
    ]
