--- a/week9/w9_spatialregression_lab.ipynb
+++ b/week9/w9_spatialregression_lab.ipynb
@@ -2944,7 +2944,7 @@
    "id": "da8511ad",
    "metadata": {},
    "source": [
-    "The improvement in model fit can be assessed through the change in pseudo R-squared values. A higher pseudo R-squared in the SDM/SDEM variant compared to the base SLM or SEM would indicate a better fit, as it explains a greater proportion of the variance in the dependent variable. Also, lower values of AIC or BIC for the SDM variant compared to the SLM would also suggest an improvement in model fit, indicating a more efficient representation of the data."
+    "The improvement in model fit can be assessed through the change in pseudo R-squared values. A higher pseudo R-squared in the SDM/SDEM variant compared to the base SLM or SEM would indicate a better fit, as it explains a greater proportion of the variance in the dependent variable. A pseudo R-squared only has meaning when compared to another pseudo R-squared of the same type, on the same data, predicting the same outcome. Also, lower values of AIC or BIC for the SDM variant compared to the SLM would also suggest an improvement in model fit, indicating a more efficient representation of the data."
    ]
   },
   {
